{
  "version": 4,
  "terraform_version": "1.1.0",
  "serial": 133,
  "lineage": "cedca9e6-e685-91cf-11a9-244f6ee423c3",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "control_node",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/d5d63cb4-e1b9-46b9-805d-a86ffbc917be/resourceGroups/azur-ansible-terraform/providers/Microsoft.Network/networkInterfaces/control-node-nic",
            "ip_configuration": [
              {
                "name": "app-ipconfiguration",
                "primary": true,
                "private_ip_address": "10.0.2.6",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/d5d63cb4-e1b9-46b9-805d-a86ffbc917be/resourceGroups/azur-ansible-terraform/providers/Microsoft.Network/publicIPAddresses/control-node-public-ip",
                "subnet_id": "/subscriptions/d5d63cb4-e1b9-46b9-805d-a86ffbc917be/resourceGroups/azur-ansible-terraform/providers/Microsoft.Network/virtualNetworks/app-network/subnets/internal"
              }
            ],
            "location": "westeurope",
            "mac_address": "00-0D-3A-2B-20-C5",
            "name": "control-node-nic",
            "private_ip_address": "10.0.2.6",
            "private_ip_addresses": [
              "10.0.2.6"
            ],
            "resource_group_name": "azur-ansible-terraform",
            "virtual_machine_id": "/subscriptions/d5d63cb4-e1b9-46b9-805d-a86ffbc917be/resourceGroups/azur-ansible-terraform/providers/Microsoft.Compute/virtualMachines/ansible-control-node"
          },
          "dependencies": [
            "azurerm_public_ip.control_node_publicip",
            "azurerm_resource_group.main",
            "azurerm_subnet.internal",
            "azurerm_virtual_network.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "db",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/d5d63cb4-e1b9-46b9-805d-a86ffbc917be/resourceGroups/azur-ansible-terraform/providers/Microsoft.Network/networkInterfaces/db-nic",
            "ip_configuration": [
              {
                "name": "app-ipconfiguration",
                "primary": true,
                "private_ip_address": "10.0.2.7",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/d5d63cb4-e1b9-46b9-805d-a86ffbc917be/resourceGroups/azur-ansible-terraform/providers/Microsoft.Network/virtualNetworks/app-network/subnets/internal"
              }
            ],
            "location": "westeurope",
            "mac_address": "00-0D-3A-2B-20-0C",
            "name": "db-nic",
            "private_ip_address": "10.0.2.7",
            "private_ip_addresses": [
              "10.0.2.7"
            ],
            "resource_group_name": "azur-ansible-terraform",
            "virtual_machine_id": "/subscriptions/d5d63cb4-e1b9-46b9-805d-a86ffbc917be/resourceGroups/azur-ansible-terraform/providers/Microsoft.Compute/virtualMachines/db"
          },
          "dependencies": [
            "azurerm_resource_group.main",
            "azurerm_subnet.internal",
            "azurerm_virtual_network.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "node1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/d5d63cb4-e1b9-46b9-805d-a86ffbc917be/resourceGroups/azur-ansible-terraform/providers/Microsoft.Network/networkInterfaces/node1-nic",
            "ip_configuration": [
              {
                "name": "app-ipconfiguration",
                "primary": true,
                "private_ip_address": "10.0.2.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/d5d63cb4-e1b9-46b9-805d-a86ffbc917be/resourceGroups/azur-ansible-terraform/providers/Microsoft.Network/publicIPAddresses/node1-public-ip",
                "subnet_id": "/subscriptions/d5d63cb4-e1b9-46b9-805d-a86ffbc917be/resourceGroups/azur-ansible-terraform/providers/Microsoft.Network/virtualNetworks/app-network/subnets/internal"
              }
            ],
            "location": "westeurope",
            "mac_address": "00-0D-3A-2B-26-7C",
            "name": "node1-nic",
            "private_ip_address": "10.0.2.4",
            "private_ip_addresses": [
              "10.0.2.4"
            ],
            "resource_group_name": "azur-ansible-terraform",
            "virtual_machine_id": "/subscriptions/d5d63cb4-e1b9-46b9-805d-a86ffbc917be/resourceGroups/azur-ansible-terraform/providers/Microsoft.Compute/virtualMachines/node1"
          },
          "dependencies": [
            "azurerm_public_ip.node1_publicip",
            "azurerm_resource_group.main",
            "azurerm_subnet.internal",
            "azurerm_virtual_network.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "node2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/d5d63cb4-e1b9-46b9-805d-a86ffbc917be/resourceGroups/azur-ansible-terraform/providers/Microsoft.Network/networkInterfaces/node2-nic",
            "ip_configuration": [
              {
                "name": "app-ipconfiguration",
                "primary": true,
                "private_ip_address": "10.0.2.5",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/d5d63cb4-e1b9-46b9-805d-a86ffbc917be/resourceGroups/azur-ansible-terraform/providers/Microsoft.Network/publicIPAddresses/node2-public-ip",
                "subnet_id": "/subscriptions/d5d63cb4-e1b9-46b9-805d-a86ffbc917be/resourceGroups/azur-ansible-terraform/providers/Microsoft.Network/virtualNetworks/app-network/subnets/internal"
              }
            ],
            "location": "westeurope",
            "mac_address": "00-0D-3A-2B-2E-C1",
            "name": "node2-nic",
            "private_ip_address": "10.0.2.5",
            "private_ip_addresses": [
              "10.0.2.5"
            ],
            "resource_group_name": "azur-ansible-terraform",
            "virtual_machine_id": "/subscriptions/d5d63cb4-e1b9-46b9-805d-a86ffbc917be/resourceGroups/azur-ansible-terraform/providers/Microsoft.Compute/virtualMachines/node2"
          },
          "dependencies": [
            "azurerm_public_ip.node2_publicip",
            "azurerm_resource_group.main",
            "azurerm_subnet.internal",
            "azurerm_virtual_network.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "control_node",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/d5d63cb4-e1b9-46b9-805d-a86ffbc917be/resourceGroups/azur-ansible-terraform/providers/Microsoft.Network/networkInterfaces/control-node-nic|/subscriptions/d5d63cb4-e1b9-46b9-805d-a86ffbc917be/resourceGroups/azur-ansible-terraform/providers/Microsoft.Network/networkSecurityGroups/control-node-nsg",
            "network_interface_id": "/subscriptions/d5d63cb4-e1b9-46b9-805d-a86ffbc917be/resourceGroups/azur-ansible-terraform/providers/Microsoft.Network/networkInterfaces/control-node-nic",
            "network_security_group_id": "/subscriptions/d5d63cb4-e1b9-46b9-805d-a86ffbc917be/resourceGroups/azur-ansible-terraform/providers/Microsoft.Network/networkSecurityGroups/control-node-nsg"
          },
          "dependencies": [
            "azurerm_network_interface.control_node",
            "azurerm_network_security_group.control_node_nsg",
            "azurerm_public_ip.control_node_publicip",
            "azurerm_resource_group.main",
            "azurerm_subnet.internal",
            "azurerm_virtual_network.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "db",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/d5d63cb4-e1b9-46b9-805d-a86ffbc917be/resourceGroups/azur-ansible-terraform/providers/Microsoft.Network/networkInterfaces/db-nic|/subscriptions/d5d63cb4-e1b9-46b9-805d-a86ffbc917be/resourceGroups/azur-ansible-terraform/providers/Microsoft.Network/networkSecurityGroups/db-nsg",
            "network_interface_id": "/subscriptions/d5d63cb4-e1b9-46b9-805d-a86ffbc917be/resourceGroups/azur-ansible-terraform/providers/Microsoft.Network/networkInterfaces/db-nic",
            "network_security_group_id": "/subscriptions/d5d63cb4-e1b9-46b9-805d-a86ffbc917be/resourceGroups/azur-ansible-terraform/providers/Microsoft.Network/networkSecurityGroups/db-nsg"
          },
          "dependencies": [
            "azurerm_network_interface.db",
            "azurerm_network_security_group.db_nsg",
            "azurerm_resource_group.main",
            "azurerm_subnet.internal",
            "azurerm_virtual_network.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "node1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/d5d63cb4-e1b9-46b9-805d-a86ffbc917be/resourceGroups/azur-ansible-terraform/providers/Microsoft.Network/networkInterfaces/node1-nic|/subscriptions/d5d63cb4-e1b9-46b9-805d-a86ffbc917be/resourceGroups/azur-ansible-terraform/providers/Microsoft.Network/networkSecurityGroups/node1-nsg",
            "network_interface_id": "/subscriptions/d5d63cb4-e1b9-46b9-805d-a86ffbc917be/resourceGroups/azur-ansible-terraform/providers/Microsoft.Network/networkInterfaces/node1-nic",
            "network_security_group_id": "/subscriptions/d5d63cb4-e1b9-46b9-805d-a86ffbc917be/resourceGroups/azur-ansible-terraform/providers/Microsoft.Network/networkSecurityGroups/node1-nsg"
          },
          "dependencies": [
            "azurerm_network_interface.node1",
            "azurerm_network_security_group.node1_nsg",
            "azurerm_public_ip.node1_publicip",
            "azurerm_resource_group.main",
            "azurerm_subnet.internal",
            "azurerm_virtual_network.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "node2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/d5d63cb4-e1b9-46b9-805d-a86ffbc917be/resourceGroups/azur-ansible-terraform/providers/Microsoft.Network/networkInterfaces/node2-nic|/subscriptions/d5d63cb4-e1b9-46b9-805d-a86ffbc917be/resourceGroups/azur-ansible-terraform/providers/Microsoft.Network/networkSecurityGroups/node2-nsg",
            "network_interface_id": "/subscriptions/d5d63cb4-e1b9-46b9-805d-a86ffbc917be/resourceGroups/azur-ansible-terraform/providers/Microsoft.Network/networkInterfaces/node2-nic",
            "network_security_group_id": "/subscriptions/d5d63cb4-e1b9-46b9-805d-a86ffbc917be/resourceGroups/azur-ansible-terraform/providers/Microsoft.Network/networkSecurityGroups/node2-nsg"
          },
          "dependencies": [
            "azurerm_network_interface.node2",
            "azurerm_network_security_group.node2_nsg",
            "azurerm_public_ip.node2_publicip",
            "azurerm_resource_group.main",
            "azurerm_subnet.internal",
            "azurerm_virtual_network.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "control_node_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/d5d63cb4-e1b9-46b9-805d-a86ffbc917be/resourceGroups/azur-ansible-terraform/providers/Microsoft.Network/networkSecurityGroups/control-node-nsg",
            "location": "westeurope",
            "name": "control-node-nsg",
            "resource_group_name": "azur-ansible-terraform",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "SSH",
                "priority": 1001,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "db_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/d5d63cb4-e1b9-46b9-805d-a86ffbc917be/resourceGroups/azur-ansible-terraform/providers/Microsoft.Network/networkSecurityGroups/db-nsg",
            "location": "westeurope",
            "name": "db-nsg",
            "resource_group_name": "azur-ansible-terraform",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "SSH",
                "priority": 1001,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "3306",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "SQL",
                "priority": 1002,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "node1_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/d5d63cb4-e1b9-46b9-805d-a86ffbc917be/resourceGroups/azur-ansible-terraform/providers/Microsoft.Network/networkSecurityGroups/node1-nsg",
            "location": "westeurope",
            "name": "node1-nsg",
            "resource_group_name": "azur-ansible-terraform",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "SSH",
                "priority": 1001,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "443",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "HTTPS",
                "priority": 1004,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "80",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "HTTP",
                "priority": 1002,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "8080",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "HTTP2",
                "priority": 1003,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "8443",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "HTTPS2",
                "priority": 1005,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "node2_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/d5d63cb4-e1b9-46b9-805d-a86ffbc917be/resourceGroups/azur-ansible-terraform/providers/Microsoft.Network/networkSecurityGroups/node2-nsg",
            "location": "westeurope",
            "name": "node2-nsg",
            "resource_group_name": "azur-ansible-terraform",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "SSH",
                "priority": 1001,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "443",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "HTTPS",
                "priority": 1004,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "80",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "HTTP",
                "priority": 1002,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "8080",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "HTTP2",
                "priority": 1003,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "8443",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "HTTPS2",
                "priority": 1005,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "control_node_publicip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "id": "/subscriptions/d5d63cb4-e1b9-46b9-805d-a86ffbc917be/resourceGroups/azur-ansible-terraform/providers/Microsoft.Network/publicIPAddresses/control-node-public-ip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.123.175.44",
            "ip_version": "IPv4",
            "location": "westeurope",
            "name": "control-node-public-ip",
            "resource_group_name": "azur-ansible-terraform",
            "sku": "Basic"
          },
          "dependencies": [
            "azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "node1_publicip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "id": "/subscriptions/d5d63cb4-e1b9-46b9-805d-a86ffbc917be/resourceGroups/azur-ansible-terraform/providers/Microsoft.Network/publicIPAddresses/node1-public-ip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.86.188.208",
            "ip_version": "IPv4",
            "location": "westeurope",
            "name": "node1-public-ip",
            "resource_group_name": "azur-ansible-terraform",
            "sku": "Basic"
          },
          "dependencies": [
            "azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "node2_publicip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "id": "/subscriptions/d5d63cb4-e1b9-46b9-805d-a86ffbc917be/resourceGroups/azur-ansible-terraform/providers/Microsoft.Network/publicIPAddresses/node2-public-ip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "40.113.103.53",
            "ip_version": "IPv4",
            "location": "westeurope",
            "name": "node2-public-ip",
            "resource_group_name": "azur-ansible-terraform",
            "sku": "Basic"
          },
          "dependencies": [
            "azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "internal",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.0.2.0/24",
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/d5d63cb4-e1b9-46b9-805d-a86ffbc917be/resourceGroups/azur-ansible-terraform/providers/Microsoft.Network/virtualNetworks/app-network/subnets/internal",
            "name": "internal",
            "resource_group_name": "azur-ansible-terraform",
            "virtual_network_name": "app-network"
          },
          "dependencies": [
            "azurerm_resource_group.main",
            "azurerm_virtual_network.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "id": "/subscriptions/d5d63cb4-e1b9-46b9-805d-a86ffbc917be/resourceGroups/azur-ansible-terraform/providers/Microsoft.Network/virtualNetworks/app-network",
            "location": "westeurope",
            "name": "app-network",
            "resource_group_name": "azur-ansible-terraform",
            "subnet": [
              {
                "address_prefix": "10.0.2.0/24",
                "id": "/subscriptions/d5d63cb4-e1b9-46b9-805d-a86ffbc917be/resourceGroups/azur-ansible-terraform/providers/Microsoft.Network/virtualNetworks/app-network/subnets/internal",
                "name": "internal"
              }
            ]
          },
          "dependencies": [
            "azurerm_resource_group.main"
          ]
        }
      ]
    }
  ]
}